--- a/lectures/01-peek-into-python-slides.html
+++ b/lectures/01-peek-into-python-slides.html
@@ -268,6 +268,18 @@ if(a &gt; 2) {
 
 - Python object `b` can be accessed in R using py$b
 - R object `a` can be accessed in Python using r.a
+
+---
+# Until next time
+
+--
+
+- Schedule a meeting if you need help configuring your system (link in chat)
+
+--
+
+- Homework 01 / Lab 01 will be posted by midnight tonight and due Sunday at 8 pm
+- Submit work as pdfs to gradescope
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
