--- a/lectures/02-types-and-structures-slides.html
+++ b/lectures/02-types-and-structures-slides.html
@@ -297,12 +297,12 @@ The most basic form of how a piece of data can be stored.
 
 --
 
-- *Strings* allow some arithmetic operations and direct indexing.
+- *Strings* allow some arithmetic operations, direct indexing.
 
 ---
 # Data Structures
 
-Data structures are *compound types* that act as containers for simple types.
+Data structures are *compound types* that act as containers for simple types. The ones built into Python 3:
 
 --
 
@@ -311,10 +311,16 @@ Data structures are *compound types* that act as containers for simple types.
 - Dictionary
 - Set
 
-Keep an eye out: data structures are denoted by different types of brackets.
+--
+
+When working with a data structure, ask:
+
+1. Is it ordered? (index by integer)
+2. Is it heterogenous? (different types)
+3. Is it mutable? (change elements)
 
 ---
-# code
+# Code
 
 ---
 # List indexing
@@ -324,6 +330,7 @@ Keep an eye out: data structures are denoted by different types of brackets.
 --
 
 &lt;img src="figs/list-indexing-bah.gif" width="40%" style="display: block; margin: auto;" /&gt;
+
 ---
 # code
 
@@ -331,6 +338,18 @@ Keep an eye out: data structures are denoted by different types of brackets.
 # Data Structures Summary
 
 &lt;img src="figs/data-structures.png" width="80%" style="display: block; margin: auto;" /&gt;
+
+
+---
+# Assignments
+
+## Homework 2
+
+Posted end of the day today, due Friday 8 pm
+
+## Lab 2
+
+Posted end of the day today, due Sunday 8 pm
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
