--- a/tutorials/pandas/pandas-II-slides.html
+++ b/tutorials/pandas/pandas-II-slides.html
@@ -53,9 +53,9 @@ names(uselections)
 ```
 
 ```
-##  [1] "year"           "state"          "state_po"       "county"        
-##  [5] "FIPS"           "office"         "candidate"      "party"         
-##  [9] "candidatevotes" "totalvotes"     "version"
+##  [1] "year"           "state"          "state_po"       "county"         "FIPS"          
+##  [6] "office"         "candidate"      "party"          "candidatevotes" "totalvotes"    
+## [11] "version"
 ```
 
 ---
@@ -237,11 +237,10 @@ slice(uselections, 1:2)
 
 ```
 ## # A tibble: 2 x 11
-##    year state state_po county  FIPS office candidate party candidatevotes
-##   &lt;dbl&gt; &lt;chr&gt; &lt;chr&gt;    &lt;chr&gt;  &lt;dbl&gt; &lt;chr&gt;  &lt;chr&gt;     &lt;chr&gt;          &lt;dbl&gt;
-## 1  2000 Alab… AL       Autau…  1001 Presi… Al Gore   demo…           4942
-## 2  2000 Alab… AL       Autau…  1001 Presi… George W… repu…          11993
-## # … with 2 more variables: totalvotes &lt;dbl&gt;, version &lt;dbl&gt;
+##    year state  state_po county   FIPS office candidate  party  candidatevotes totalvotes version
+##   &lt;dbl&gt; &lt;chr&gt;  &lt;chr&gt;    &lt;chr&gt;   &lt;dbl&gt; &lt;chr&gt;  &lt;chr&gt;      &lt;chr&gt;           &lt;dbl&gt;      &lt;dbl&gt;   &lt;dbl&gt;
+## 1  2000 Alaba… AL       Autauga  1001 Presi… Al Gore    democ…           4942      17208  2.02e7
+## 2  2000 Alaba… AL       Autauga  1001 Presi… George W.… repub…          11993      17208  2.02e7
 ```
 
 
@@ -537,7 +536,7 @@ uselections.groupby("year")
 
 
 ```
-## &lt;pandas.core.groupby.generic.DataFrameGroupBy object at 0x7f8e001917f0&gt;
+## &lt;pandas.core.groupby.generic.DataFrameGroupBy object at 0x7f8a330d8fd0&gt;
 ```
 
 --
