--- a/lectures/14-classes-and-objects-2-slides.html
+++ b/lectures/14-classes-and-objects-2-slides.html
@@ -596,7 +596,18 @@ What's really going on here?
 - Allows methods to be organized by narrowly defined base classes but available to the final derived class instance.
 
 ---
+# Final Assignment
+--
 
+Remake the data analysis submitted as Lab 1 using Python.
+
+- Format: RMarkdown file, knit to pdf
+- Use Python where you can, R where you can't
+- Define a new class if it'd be helpful
+- Final knitted report should be production grade
+  - No unnecessary printing
+  - No code showing
+  - Polished graphics
 
 
 
